--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -246,6 +246,10 @@
     <Compile Include="Migrations\201709191448303_OAuthApplicationUpgradeOne.Designer.cs">
       <DependentUpon>201709191448303_OAuthApplicationUpgradeOne.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710031100108_PerApplicationEntity.cs" />
+    <Compile Include="Migrations\201710031100108_PerApplicationEntity.Designer.cs">
+      <DependentUpon>201710031100108_PerApplicationEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\MigrationManager.cs" />
     <Compile Include="Migrations\MigrationsContextFactory.cs" />
@@ -275,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709191448303_OAuthApplicationUpgradeOne.resx">
       <DependentUpon>201709191448303_OAuthApplicationUpgradeOne.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710031100108_PerApplicationEntity.resx">
+      <DependentUpon>201710031100108_PerApplicationEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
