--- a/Presentation/mobSocial.WebApi/packages.config
+++ b/Presentation/mobSocial.WebApi/packages.config
@@ -36,6 +36,9 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="NReco.VideoConverter" version="1.1.0.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net451" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net451" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net451" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
 </packages>
