made swagger configurable from web.config

--- a/Presentation/mobSocial.WebApi/Web.config
+++ b/Presentation/mobSocial.WebApi/Web.config
@@ -19,6 +19,9 @@
     <add key="apiPrefix" value="" />
     <add key="enableCors" value="false" />
     <add key="corsAllowedOrigins" value="*" />
+    <add key="enableSwagger" value="false"/>
+    <add key="swaggerOAuthAppId" value=""/>
+    <add key="swaggerOAuthClientSecret" value=""/>
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
