--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -505,12 +505,17 @@
     <Content Include="Content\AdminLTE\css\skins\_all-skins.min.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\jquery-2.2.3.min.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Media\d_cover.jpg" />
     <Content Include="Content\Media\d_female.jpg" />
     <Content Include="Content\Media\d_male.jpg" />
+    <Content Include="Content\Media\noimage.jpg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -551,6 +556,13 @@
     <Content Include="Content\AdminLTE\css\overrides.scss">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\Media\Uploads\Images\.gitkeep" />
+    <Content Include="Content\Media\Uploads\Others\.gitkeep" />
+    <Content Include="Content\Media\Uploads\Videos\.gitkeep" />
     <None Include="mobSocial.WebApi.wpp.targets" />
     <Content Include="Views\OAuth\Authorize.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
